--- a/main/wind_velocity/makefile
+++ b/main/wind_velocity/makefile
@@ -1,6 +1,6 @@
 FLAGS = -W
-OBJS  = ../../src/main.c ../../src/pso.c ../../src/freq/freq.c ../../src/utils/tools.c
-HEAD = ../../src/freq/freq.h ../../src/pso.h ../../src/utils/tools.h
+OBJS  = ../../src/wind_velocity/main.c ../../src/wind_velocity/pso.c ../../src/wind_velocity/freq/freq.c ../../src/utils/tools.c
+HEAD = ../../src/wind_velocity/freq/freq.h ../../src/wind_velocity/pso.h ../../src/utils/tools.h
 NAME = pso 
 
 $(NAME): $(OBJS) $(HEAD)
